src/objects/OrderApi__Payment_Terms__c.object
<CustomObject>
    <description>Custom Payment Terms for Invoices.</description>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to the related Business Group.</description>
        <inlineHelpText>**Required** Link to the related Business Group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Payment Terms Options</relationshipLabel>
        <relationshipName>Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Message__c</fullName>
        <description>The displayed message to the customer for the Payment Terms.</description>
        <inlineHelpText>The displayed message to the customer for the Payment Terms.</inlineHelpText>
        <label>Display Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Display_Name__c</fullName>
        <description>The displayed name (to the customer) for the Payment Terms. Defaults to the name value of the record.</description>
        <inlineHelpText>The displayed name (to the customer) for the Payment Terms. Defaults to the name value of the record.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Variable__c</fullName>
        <description>**Required** The number of days to add to the Invoice Date to use to calculate due date.</description>
        <inlineHelpText>**Required** The number of days to add to the Invoice Date to use to calculate due date.</inlineHelpText>
        <label>Variable</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Terms</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>